--- a/PLP3-AA9/styles.css
+++ b/PLP3-AA9/styles.css
@@ -72,6 +72,7 @@ body {
         "articles1 articles1"
         "figure aside"
         "recent-posts aside"
+        "nav-pages aside"
         "summary summary";
     grid-template-columns: 65% 35%;
     grid-template-rows: auto auto auto auto;
@@ -88,10 +89,10 @@ body {
 
 .big-figure {
     grid-area: figure;
+    border: 5px solid black;
 }
 
 .big-figure-image {
-    width: 100%;
 }
 
 .big-figure-info {
@@ -125,7 +126,21 @@ body {
 .recent-posts {
     grid-area: recent-posts;
     display: grid;
-    grid-template-rows: repeat(6, auto);
+    grid-template-rows: 8% repeat(6, 1fr);
+}
+
+.nav-pages {
+    grid-area: nav-pages;
+    display: flex;
+    margin: 15px 40px;
+    background-color: blue;
+}
+
+.nav-pages-numbers {
+    display: grid;
+    list-style-type: none;
+    grid-template-columns: repeat(4, 25px);
+    background-color: rgb(0, 179, 255);
 }
 
 .summary {
@@ -182,7 +197,6 @@ body {
 
 .article1-image {
     grid-area: article1-image;
-    width: 100%;
     margin: 0 20px 0 5px;
 }
 
@@ -195,7 +209,40 @@ body {
     margin: 0;
 }
 
+.recent-posts-title{
+    font-size: 36px;
+    text-align: center;
+    margin: 15px 40px;
+}
+
+.recent-posts-article {
+    display: grid;
+    grid-template-columns: 20% auto;
+    margin: 15px 40px;
+}
+
+.recent-posts-article-text {
+    display: flex;
+    flex-direction: column;
+    margin-left: 20px;
+}
+
+.recent-post-article-detail {
+    display: grid;
+    grid-template-columns: 15% 20% auto;
+}
+
+.recent-posts-article-title {
+    font-size: 24px;
+    margin: 0;
+    padding: 0;
+    grid-column: 1/4;
+}
+
 article {
     border: 2px solid black;
 }
 
+img {
+    width: 100%;
+}
