--- a/PLP3-AA9/styles.css
+++ b/PLP3-AA9/styles.css
@@ -74,7 +74,7 @@ body {
         "recent-posts aside"
         "nav-pages aside"
         "summary summary";
-    grid-template-columns: 65% 35%;
+    grid-template-columns: 70% 30%;
     grid-template-rows: auto auto auto auto;
     border-top: 5px solid black;
     border-bottom: 5px solid black;
@@ -118,10 +118,12 @@ body {
 .aside-container {
     grid-area: aside;
     display: grid;
+    grid-template-rows: repeat(5 auto);
     border-top: 5px solid black;
     border-bottom: 5px solid black;
     background-color: chocolate;
 }
+
 
 .recent-posts {
     grid-area: recent-posts;
@@ -132,16 +134,26 @@ body {
 .nav-pages {
     grid-area: nav-pages;
     display: flex;
+    justify-items: flex-start;
+    align-items: center;
+    gap: 5px;
     margin: 15px 40px;
-    background-color: blue;
+    background-color: rgb(16, 235, 81);
 }
 
 .nav-pages-numbers {
-    display: grid;
+    display: flex;
+    flex-direction: row;
+    flex-basis: 60px;
     list-style-type: none;
-    grid-template-columns: repeat(4, 25px);
+    padding-left: 5px;
     background-color: rgb(0, 179, 255);
 }
+
+.nav-pages-numbers li {
+    font-size: 24px;
+}
+
 
 .summary {
     grid-area: summary;
@@ -187,16 +199,19 @@ body {
     margin-bottom: 20px;
 }
 
+.article-image {
+    grid-area: article-image;
+}
+
 .article1 {
     display: grid;
     grid-template-areas:
-        "article1-image article-text";
+        "article-image article-text";
     grid-template-columns: 30% auto;
     margin-top: 20px;
 }
 
 .article1-image {
-    grid-area: article1-image;
     margin: 0 20px 0 5px;
 }
 
@@ -228,8 +243,9 @@ body {
 }
 
 .recent-post-article-detail {
-    display: grid;
-    grid-template-columns: 15% 20% auto;
+    display: flex;
+    justify-content: flex-start;
+    gap: 10px;
 }
 
 .recent-posts-article-title {
@@ -239,10 +255,111 @@ body {
     grid-column: 1/4;
 }
 
+
+.aside-popular-articles {
+    display: flex;
+    flex-direction: column;
+}
+
+.aside-popular-articles-list {
+    display: flex;
+    flex-direction: column;
+}
+
+.aside-popular-articles-article {
+    display: grid;
+    grid-template-areas:
+        "article-text article-image";
+    grid-template-columns: auto 32%;
+    margin: 0 20px 20px 0;
+    background-color: aliceblue;
+}
+
+.aside-search {
+    background-color: burlywood;
+}
+
+.aside-search-form {
+    display: flex;
+    flex-direction: row;
+    margin: 0 0 0 5px;
+    background-color: dimgrey;
+}
+
+.aside-trending {
+    display: flex;
+    flex-direction: column;
+}
+
+.aside-trending-figure {
+    display: flex;
+    flex-direction: column;
+    margin: 20px;
+}
+
+.aside-trending-article {
+    display: grid;
+    grid-template-areas:
+        "article-image article-text";
+    margin: 10px 20px 10px 20px;
+}
+
+.aside-tagscloud1-article {
+    display: grid;
+    grid-template-areas:
+        "article-image article-text";
+    margin: 10px 20px 10px 20px;
+}
+
+.aside-tagscloud1-boxes {
+    display: flex;
+    flex-wrap: wrap;
+    margin: 0px 60px 0px 20px;
+}
+
+.aside-tagscloud2 {
+    margin-bottom: 10px;
+}
+
+.aside-tagscloud2-boxes {
+    display: flex;
+    flex-wrap: wrap;
+    margin: 0px 60px 0px 20px;
+}
+
+.tag-box {
+    background-color: lightgrey;
+    padding: 8px;
+    margin: 5px;
+}
+
+
+#aside-search-textinput {
+    flex-basis: 80%;
+    height: 30px;
+    border: 1px solid black;
+}
+
+#aside-search-button {
+    flex-basis: 20%;
+    color: white;
+    background-color: black;
+    border: 0;
+    
+}
+
+#aside-search-button:active {
+    color: gray;
+}
+
 article {
     border: 2px solid black;
 }
 
 img {
     width: 100%;
+}
+
+h2 {
+    margin: 10px 0px 10px 10px
 }
